<resources>
    <string name="app_name">MyMatters</string>
    <string name="title_press_for_edit">Нажмите чтобы редактировать</string>
    <string name="title_information_here">Информация будет тут</string>
    <string name="title_finance">Учёт финансов</string>
    <string name="title_total_resources">Всего средств</string>
    <string name="title_wallet">Кошельки</string>
    <string name="title_coinbox">Копилки</string>
    <string name="title_wallet_family">Кошелёк</string>
    <string name="title_coinbox_family">Копилка</string>
    <string-array name="titles_cardday">
        <item>Рейтинг категорий</item>
        <item>Доход</item>
        <item>Расход</item>
    </string-array>
    <string name="value_nan">-</string>
    <string name="title_input_name">Введите имя</string>
    <string name="title_add_in_family">Добавить в семью</string>
    <string name="button_save">Сохранить</string>
    <string name="button_cancel">Отмена</string>
    <string name="title_lower_to">в</string>
    <string name="title_lower_from">из</string>
    <string name="title_income">Доход</string>
    <string name="title_demand">Расход</string>
    <string name="title_date">Дата</string>
    <string name="title_sum">Сумма</string>
    <string name="title_comment">Комментарий</string>
    <string name="title_category">Категория</string>
    <string name="title_target_name">Имя цели</string>
    <string name="title_in_progress">В процессе</string>
    <string name="title_completed">Достигнута</string>
    <string name="title_end_sum">Конечная сумма</string>
    <string name="title_current_sum">Текущая сумма</string>
    <string name="title_create_target">Создать цель</string>
</resources>