<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_white_gradient"
    tools:context=".cardday.CardDayFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/title_total_resources"
                    android:textColor="#3A3A3A"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="41dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="45dp"
                        android:layout_marginTop="15dp"
                        android:src="@mipmap/ic_wallet_icon_foreground"
                        app:layout_constraintBottom_toTopOf="@+id/view"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/title_wallet"
                        android:textColor="#000000"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.115"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/wallet_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/value_nan"
                        android:textColor="@color/green"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.49"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toBottomOf="@+id/textView7" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="15dp"
                        android:background="@color/light_green"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/wallet_text_view" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="41dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="45dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="36dp"
                        android:src="@mipmap/ic_safe_foreground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/title_coinbox"
                        android:textColor="#000000"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <TextView
                        android:id="@+id/coinbox_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/value_nan"
                        android:textColor="@color/green"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/cardday_info_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</FrameLayout>